--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "2.0.1",
+    "crypto-js": "^3.1.7",
     "express": "4.14.0",
     "fontfaceobserver": "2.0.4",
     "immutable": "3.8.1",
